[gd_scene load_steps=10 format=3 uid="uid://u1k3pggod73i"]

[ext_resource type="Script" path="res://Assets/Character/character.gd" id="1_iije8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_q3oat"]
size = Vector3(1, 1, 100)

[sub_resource type="Gradient" id="Gradient_pftvc"]
interpolation_mode = 2

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c20nh"]
gradient = SubResource("Gradient_pftvc")
fill_to = Vector2(1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xpc35"]
shading_mode = 0
albedo_texture = SubResource("GradientTexture2D_c20nh")

[sub_resource type="QuadMesh" id="QuadMesh_1s7er"]

[sub_resource type="BoxShape3D" id="BoxShape3D_p45d5"]
size = Vector3(100, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_k8fao"]
size = Vector3(1, 0.1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_xfhmt"]
size = Vector3(1, 0, 100)

[node name="Character" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_iije8")
RotateSpeed = 7

[node name="CollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_q3oat")

[node name="Camera" type="Camera3D" parent="CollisionShape"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 100)
projection = 1
size = 10.0

[node name="Visual" type="MeshInstance3D" parent="CollisionShape"]
material_override = SubResource("StandardMaterial3D_xpc35")
mesh = SubResource("QuadMesh_1s7er")
skeleton = NodePath("../..")

[node name="SpaceDetect" type="ShapeCast3D" parent="CollisionShape"]
shape = SubResource("BoxShape3D_p45d5")
target_position = Vector3(0, 0, 0)
collision_mask = 3

[node name="GroundDetect" type="ShapeCast3D" parent="CollisionShape"]
shape = SubResource("BoxShape3D_k8fao")
target_position = Vector3(0, -0.55, 0)
collision_mask = 3

[node name="GroundFinder" type="ShapeCast3D" parent="CollisionShape"]
shape = SubResource("BoxShape3D_xfhmt")
target_position = Vector3(0, -0.501, 0)
collision_mask = 3
